# wordle_game_rs

./: Cargo.toml
examples/: csv_loader.rs
src/: file_fetcher.rs  game.rs  lib.rs  library.rs  main.rs  word.rs
